--- a/#src/blog.html
+++ b/#src/blog.html
@@ -24,9 +24,9 @@
                     <h2>Blog</h2>
                 </div>
                 <div class="blog-section__grid">
-                    <div class="blog-section__item blog-item">
+                    <div class="blog-section__item blog-item" data-aos="fade-up-right" data-aos-duration="1000">
                         <img src="img/post1.jpg" alt="post" class="blog-item__thumbnail">
-                        <div class="blog-item__text">
+                        <div class="blog-item__text" >
                             <h3 class="blog-item__title">Lorem ipsum dolor asamet</h3>
                             <p class="blog-item__excerpt">Nulla Lorem mollit cupidatat irure. Laborum magna nulla duis ullamco cillum dolor. Voluptate exercitation incididunt aliquip deserunt reprehenderit elit laborum...</p>
                             <div class="blog-item__meta">
@@ -35,7 +35,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="blog-section__item blog-item">
+                    <div class="blog-section__item blog-item" data-aos="fade-up-left" data-aos-duration="1000">
                         <img src="img/post2.jpg" alt="post" class="blog-item__thumbnail">
                         <div class="blog-item__text">
                             <h3 class="blog-item__title">Lorem ipsum dolor asamet</h3>
@@ -46,7 +46,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="blog-section__item blog-item">
+                    <div class="blog-section__item blog-item" data-aos="fade-up-right" data-aos-duration="1000">
                         <img src="img/post2.jpg" alt="post" class="blog-item__thumbnail">
                         <div class="blog-item__text">
                             <h3 class="blog-item__title">Lorem ipsum dolor asamet</h3>
@@ -57,7 +57,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="blog-section__item blog-item">
+                    <div class="blog-section__item blog-item" data-aos="fade-up-left" data-aos-duration="1000">
                         <img src="img/post1.jpg" alt="post" class="blog-item__thumbnail">
                         <div class="blog-item__text">
                             <h3 class="blog-item__title">Lorem ipsum dolor asamet</h3>
