--- a/#src/performance-single.html
+++ b/#src/performance-single.html
@@ -23,8 +23,8 @@
         <div class="collection-hero">
             <div class="container">
                 <div class="collection-hero__body">
-                    <img src="img/performance.png" alt="collection" class="collection-hero__image">
-                    <div class="collection-hero__info collection-info">
+                    <img src="img/performance.png" alt="collection" class="collection-hero__image" data-aos="fade-right" data-aos-duration="1500">
+                    <div class="collection-hero__info collection-info" data-aos="fade-left" data-aos-duration="1500">
                         <p>
                             Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
                             consequat duis enim velit mollit.
@@ -60,7 +60,7 @@
             </div>
         </div>
 
-        <div class="collection-description">
+        <div class="collection-description" data-aos="fade-right" data-aos-duration="1500">
             <div class="container">
                 <div class="collection-description__text">
                     <p>
@@ -82,10 +82,10 @@
         </div>
 
         <div class="page__product-slider product-slider">
-            <h2 class="product-slider__title">Award Winner</h2>
+            <h2 class="product-slider__title" data-aos="fade-in" data-aos-duration="1500">Award Winner</h2>
             <div class="product-slider__body">
                 <div class="product-slider__slider product-container">
-                    <div class="slider-product__body swiper">
+                    <div class="slider-product__body swiper" data-aos="fade-in" data-aos-duration="1500">
                         <div class="slider-product__slide">
                             <img src="img/7year.jpg" alt="product">
                             <div class="product-description">
