--- a/#src/performance.html
+++ b/#src/performance.html
@@ -24,8 +24,8 @@
             <div class="container">
                 <div class="performance-body">
                     <div class="performance-body__item performance-item">
-                        <img src="img/medal.png" alt="award" class="performance-item__image">
-                        <div class="performance-item__description">
+                        <img src="img/medal.png" alt="award" class="performance-item__image" data-aos="fade-right" data-aos-duration="1500">
+                        <div class="performance-item__description" data-aos="fade-left" data-aos-duration="1500">
                             <p>
                                 Donec pretium fringilla blandit. Etiam ut accumsan leo. Aliquam id mi quam. Vivamus dictum ut erat nec congue. Etiam facilisis lacus ut arcu vulputate, non pellentesque sem convallis. Proin tempus sapien nisl, nec varius risus tristique a. venenatis tincidunt
                                 nibh, sit amet fringilla augue malesuada a. Mauris a nunc congue, viverra lectus sed, imperdiet quam. Aenean tempor sem sed lorem ultricies lacinia. Sed sit amet tortor nibh. Donec condimentum posuere nunc, et hendrerit
@@ -39,9 +39,10 @@
                             </a>
                         </div>
                     </div>
+
                     <div class="performance-body__item performance-item">
-                        <img src="img/medal2.png" alt="award" class="performance-item__image">
-                        <div class="performance-item__description">
+                        <img src="img/medal2.png" alt="award" class="performance-item__image" data-aos="fade-left" data-aos-duration="1500">
+                        <div class="performance-item__description" data-aos="fade-right" data-aos-duration="1500">
                             <p>
                                 Donec pretium fringilla blandit. Etiam ut accumsan leo. Aliquam id mi quam. Vivamus dictum ut erat nec congue. Etiam facilisis lacus ut arcu vulputate, non pellentesque sem convallis. Proin tempus sapien nisl, nec varius risus tristique a. venenatis tincidunt
                                 nibh, sit amet fringilla augue malesuada a. Mauris a nunc congue, viverra lectus sed, imperdiet quam. Aenean tempor sem sed lorem ultricies lacinia. Sed sit amet tortor nibh. Donec condimentum posuere nunc, et hendrerit
@@ -55,9 +56,10 @@
                             </a>
                         </div>
                     </div>
+
                     <div class="performance-body__item performance-item">
-                        <img src="img/medal3.png" alt="award" class="performance-item__image">
-                        <div class="performance-item__description">
+                        <img src="img/medal3.png" alt="award" class="performance-item__image" data-aos="fade-right" data-aos-duration="1500">
+                        <div class="performance-item__description" data-aos="fade-left" data-aos-duration="1500">
                             <p>
                                 Donec pretium fringilla blandit. Etiam ut accumsan leo. Aliquam id mi quam. Vivamus dictum ut erat nec congue. Etiam facilisis lacus ut arcu vulputate, non pellentesque sem convallis. Proin tempus sapien nisl, nec varius risus tristique a. venenatis tincidunt
                                 nibh, sit amet fringilla augue malesuada a. Mauris a nunc congue, viverra lectus sed, imperdiet quam. Aenean tempor sem sed lorem ultricies lacinia. Sed sit amet tortor nibh. Donec condimentum posuere nunc, et hendrerit
@@ -71,9 +73,10 @@
                             </a>
                         </div>
                     </div>
+
                     <div class="performance-body__item performance-item">
-                        <img src="img/medal.png" alt="award" class="performance-item__image">
-                        <div class="performance-item__description">
+                        <img src="img/medal.png" alt="award" class="performance-item__image" data-aos="fade-left" data-aos-duration="1500">
+                        <div class="performance-item__description" data-aos="fade-right" data-aos-duration="1500"> 
                             <p>
                                 Donec pretium fringilla blandit. Etiam ut accumsan leo. Aliquam id mi quam. Vivamus dictum ut erat nec congue. Etiam facilisis lacus ut arcu vulputate, non pellentesque sem convallis. Proin tempus sapien nisl, nec varius risus tristique a. venenatis tincidunt
                                 nibh, sit amet fringilla augue malesuada a. Mauris a nunc congue, viverra lectus sed, imperdiet quam. Aenean tempor sem sed lorem ultricies lacinia. Sed sit amet tortor nibh. Donec condimentum posuere nunc, et hendrerit
