--- a/#src/technology.html
+++ b/#src/technology.html
@@ -34,13 +34,11 @@
         </div>
         <div class="technology-main">
             <div class="technology-title" id="plantatii" style="background: url('/img/plantatii.jpg') 50% 50% / cover no-repeat;">
-                <h2>
-                    Plantații
-                </h2>
+                <h2 data-aos="zoom-in" data-aos-duration="1500">Plantații</h2>
             </div>
             <div class="technology-posts">
                 <div class="technology-posts__grid">
-                    <div class="technology-post">
+                    <div class="technology-post" data-aos="fade-up" data-aos-duration="1500">
                         <img src="img/tec-post1.jpg" alt="">
                         <div class="technology-post__content">
                             <h3>Lorem ipsum dolor</h3>
@@ -50,7 +48,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="technology-post">
+                    <div class="technology-post" data-aos="fade-down" data-aos-duration="1500">
                         <img src="img/tec-post2.jpg" alt="">
                         <div class="technology-post__content">
                             <h3>Lorem ipsum dolor</h3>
@@ -60,7 +58,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="technology-post">
+                    <div class="technology-post" data-aos="fade-right" data-aos-duration="1500">
                         <img src="img/tec-post3.jpg" alt="">
                         <div class="technology-post__content">
                             <h3>Lorem ipsum dolor</h3>
@@ -72,14 +70,13 @@
                     </div>
                 </div>
             </div>
+
             <div class="technology-title" id="distilare" style="background: url('/img/tec-post-header1.jpg') 50% 50% / cover no-repeat;">
-                <h2>
-                    Distilare
-                </h2>
+                <h2 data-aos="zoom-in" data-aos-duration="1500">Distilare</h2>
             </div>
             <div class="technology-posts">
                 <div class="technology-posts__grid">
-                    <div class="technology-post">
+                    <div class="technology-post" data-aos="fade-up" data-aos-duration="1500">
                         <img src="img/tec-post1.jpg" alt="">
                         <div class="technology-post__content">
                             <h3>Lorem ipsum dolor</h3>
@@ -89,7 +86,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="technology-post">
+                    <div class="technology-post" data-aos="fade-down" data-aos-duration="1500">
                         <img src="img/tec-post5.jpg" alt="">
                         <div class="technology-post__content">
                             <h3>Lorem ipsum dolor</h3>
@@ -99,7 +96,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="technology-post">
+                    <div class="technology-post" data-aos="fade-right" data-aos-duration="1500">
                         <img src="img/tec-post6.jpg" alt="">
                         <div class="technology-post__content">
                             <h3>Lorem ipsum dolor</h3>
@@ -111,14 +108,13 @@
                     </div>
                 </div>
             </div>
+
             <div class="technology-title" id="maturare" style="background: url('/img/tec-post-header2.jpg') 50% 50% / cover no-repeat;">
-                <h2>
-                    Maturare    
-                </h2>
+                <h2 data-aos="zoom-in" data-aos-duration="1500">Maturare</h2>
             </div>
             <div class="technology-posts">
                 <div class="technology-posts__grid">
-                    <div class="technology-post">
+                    <div class="technology-post" data-aos="fade-up" data-aos-duration="1500">
                         <img src="img/tec-post1.jpg" alt="">
                         <div class="technology-post__content">
                             <h3>Lorem ipsum dolor</h3>
@@ -128,7 +124,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="technology-post">
+                    <div class="technology-post" data-aos="fade-down" data-aos-duration="1500">
                         <img src="img/tec-post5.jpg" alt="">
                         <div class="technology-post__content">
                             <h3>Lorem ipsum dolor</h3>
@@ -138,7 +134,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="technology-post">
+                    <div class="technology-post" data-aos="fade-right" data-aos-duration="1500">
                         <img src="img/tec-post-big1.jpg" alt="">
                         <div class="technology-post__content">
                             <h3>Lorem ipsum dolor</h3>
@@ -150,14 +146,13 @@
                     </div>
                 </div>
             </div>
+
             <div class="technology-title" id="cupajare" style="background: url('/img/tec-post-header3.jpg') 50% 50% / cover no-repeat;">
-                <h2>
-                    Cupajare
-                </h2>
+                <h2 data-aos="zoom-in" data-aos-duration="1500">Cupajare</h2>
             </div>
             <div class="technology-posts">
                 <div class="technology-posts__grid">
-                    <div class="technology-post">
+                    <div class="technology-post" data-aos="fade-up" data-aos-duration="1500">
                         <img src="img/tec-post1.jpg" alt="">
                         <div class="technology-post__content">
                             <h3>Lorem ipsum dolor</h3>
@@ -167,7 +162,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="technology-post">
+                    <div class="technology-post" data-aos="fade-down" data-aos-duration="1500">
                         <img src="img/tec-post2.jpg" alt="">
                         <div class="technology-post__content">
                             <h3>Lorem ipsum dolor</h3>
@@ -177,7 +172,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="technology-post">
+                    <div class="technology-post" data-aos="fade-right" data-aos-duration="1500">
                         <img src="img/tec-post3.jpg" alt="">
                         <div class="technology-post__content">
                             <h3>Lorem ipsum dolor</h3>
@@ -189,14 +184,13 @@
                     </div>
                 </div>
             </div>
+
             <div class="technology-title" id="odihna" style="background: url('/img/tec-post-header4.jpg') 50% 50% / cover no-repeat;">
-                <h2>
-                    Odihna
-                </h2>
+                <h2 data-aos="zoom-in" data-aos-duration="1500">Odihna</h2>
             </div>
             <div class="technology-posts">
                 <div class="technology-posts__grid">
-                    <div class="technology-post">
+                    <div class="technology-post" data-aos="fade-up" data-aos-duration="1500">
                         <img src="img/tec-post1.jpg" alt="">
                         <div class="technology-post__content">
                             <h3>Lorem ipsum dolor</h3>
@@ -206,7 +200,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="technology-post">
+                    <div class="technology-post" data-aos="fade-down" data-aos-duration="1500">
                         <img src="img/tec-post2.jpg" alt="">
                         <div class="technology-post__content">
                             <h3>Lorem ipsum dolor</h3>
@@ -216,7 +210,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="technology-post">
+                    <div class="technology-post" data-aos="fade-right" data-aos-duration="1500">
                         <img src="img/tec-post3.jpg" alt="">
                         <div class="technology-post__content">
                             <h3>Lorem ipsum dolor</h3>
@@ -228,14 +222,13 @@
                     </div>
                 </div>
             </div>
+
             <div class="technology-title" id="distilare" style="background: url('/img/tec-post-header4.jpg') 50% 50% / cover no-repeat;">
-                <h2>
-                    Distilare
-                </h2>
+                <h2 data-aos="zoom-in" data-aos-duration="1500">Distilare</h2>
             </div>
             <div class="technology-posts">
                 <div class="technology-posts__grid">
-                    <div class="technology-post">
+                    <div class="technology-post" data-aos="fade-up" data-aos-duration="1500">
                         <img src="img/tec-post1.jpg" alt="">
                         <div class="technology-post__content">
                             <h3>Lorem ipsum dolor</h3>
@@ -245,7 +238,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="technology-post">
+                    <div class="technology-post" data-aos="fade-down" data-aos-duration="1500">
                         <img src="img/tec-post2.jpg" alt="">
                         <div class="technology-post__content">
                             <h3>Lorem ipsum dolor</h3>
@@ -255,7 +248,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="technology-post">
+                    <div class="technology-post" data-aos="fade-right" data-aos-duration="1500">
                         <img src="img/tec-post3.jpg" alt="">
                         <div class="technology-post__content">
                             <h3>Lorem ipsum dolor</h3>
@@ -268,13 +261,11 @@
                 </div>
             </div>
             <div class="technology-title" id="turnarea" style="background: url('/img/tec-post-header1.jpg') 50% 50% / cover no-repeat;">
-                <h2>
-                    Turnarea in sticle
-                </h2>
+                <h2 data-aos="zoom-in" data-aos-duration="1500">Turnarea in sticle</h2>
             </div>
             <div class="technology-posts">
                 <div class="technology-posts__grid">
-                    <div class="technology-post">
+                    <div class="technology-post" data-aos="fade-up" data-aos-duration="1500">
                         <img src="img/tec-post1.jpg" alt="">
                         <div class="technology-post__content">
                             <h3>Lorem ipsum dolor</h3>
@@ -284,7 +275,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="technology-post">
+                    <div class="technology-post" data-aos="fade-down" data-aos-duration="1500">
                         <img src="img/tec-post2.jpg" alt="">
                         <div class="technology-post__content">
                             <h3>Lorem ipsum dolor</h3>
@@ -294,7 +285,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="technology-post">
+                    <div class="technology-post" data-aos="fade-right" data-aos-duration="1500">
                         <img src="img/tec-post3.jpg" alt="">
                         <div class="technology-post__content">
                             <h3>Lorem ipsum dolor</h3>
@@ -308,6 +299,10 @@
             </div>
         </div>
     </main>
+
+    <!-- <button class="to-top">
+        <img src="img/chevron-up-solid.svg" alt="">
+    </button> -->
 
     @@include('components/footer.html')
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
